--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
-  "ownerName": ["Christian ID"],
-  "ownerNum": "6285921165857",
-  "botName": "Hitomi MD",
+  "ownerNumber": ["6288980870067@s.whatsapp.net"],
+  "ownerName": ["SabilOfc"],
+  "ownerNum": "6288980870067",
+  "botName": "Futube MD",
   "hitokey": "HitomiMd",
   "leyskey": "IkyOgiwara",
   "lolkey": "Beli Sendiri Di Lolkey",
   "namaButton": "Youtube",
-  "linkButton": "https://youtube.com/c/ChristianID99",
+  "linkButton": "https://youtube.com/c/SabilOfc",
   "donasiQris": "https://i.ibb.co/f2h3MDQ/Qris.jpg",
-  "donasiPulsa": "0813-2850-7885",
+  "donasiPulsa": "0889-8087-0067",
   "sb": "➸",
-  "footer": "© Hitomi MD 2022",
-  "fake": "HITOMI MULTI DEVICE",
+  "footer": "© Futube MD 2022",
+  "fake": "FUTUBE MULTI DEVICE",
   "sessionName": "hitomi",
   "pathimg": "./media/hitomi.jpg",
   "randomlink": ["https://i.ibb.co/Ybbz3qm/b1511a60173f.jpg","https://i.ibb.co/gzx9tkF/e525998814c2.jpg","https://i.ibb.co/7t4ndRM/9d4d951fe9c8.jpg","https://i.ibb.co/61WQK7v/44d84e1d31fc.jpg"],
