--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
   "lolkey": "Beli Sendiri Di Lolkey",
   "namaButton": "Youtube",
   "linkButton": "https://youtube.com/c/SabilOfc",
-  "donasiQris": "https://i.ibb.co/f2h3MDQ/Qris.jpg",
+  "donasiQris": "/image/donasi.jpg"",
   "donasiPulsa": "0889-8087-0067",
   "sb": "➸",
   "footer": "© Futube MD 2022",
